--- a/HTML/One-Pages/Lawyer/RTL/index.html
+++ b/HTML/One-Pages/Lawyer/RTL/index.html
@@ -77,7 +77,7 @@
 								<a href="#services"><span data-hover="Services">Services</span></a>
 							</li>
 							<li class="page-scroll">
-								<a href="#why-we"><span data-hover="Why we">Why we</span></a>
+								<a href="#why-we"><span data-hover="Why Jim">Why we</span></a>
 							</li>
 							<li class="page-scroll">
 								<a href="#benefits"><span data-hover="Benefits">Benefits</span></a>
