--- a/HTML/One-Pages/Lawyer/index.html
+++ b/HTML/One-Pages/Lawyer/index.html
@@ -60,7 +60,7 @@
 					</button>
 
 					<a class="navbar-brand" href="#body">
-						<img src="assets/img/logo-dark.png" alt="Logo">
+						<img src="assets/img/jimlogo.png" alt="Logo">
 					</a>
 				</div>
 
@@ -75,7 +75,7 @@
 								<a href="#services"><span data-hover="Services">Services</span></a>
 							</li>
 							<li class="page-scroll">
-								<a href="#why-we"><span data-hover="Why we">Why we</span></a>
+								<a href="#why-we"><span data-hover="Hult Law Firm">Hult Law Firm</span></a>
 							</li>
 							<li class="page-scroll">
 								<a href="#benefits"><span data-hover="Benefits">Benefits</span></a>
@@ -114,7 +114,7 @@
 						<li data-index="rs-68" data-transition="zoomout" data-slotamount="default" data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="2000"  data-thumb="assets/img-temp/promo/img1.jpg" data-rotate="0" data-saveperformance="off" data-title="Intro" data-description="">
 
 							<!-- MAIN IMAGE -->
-							<img src="assets/img-temp/promo/img1.jpg" alt="" data-bgposition="50% 10%" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
+							<img src="assets/img-temp/promo/boulder.jpg" alt="" data-bgposition="50% 10%" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
 
 							<!-- LAYERS -->
 
@@ -159,7 +159,7 @@
 								data-splitout="none"
 								data-responsive_offset="on"
 
-								style="z-index: 7; white-space: nowrap; text-align: center; text-transform: uppercase;">The Law<br> Must Work
+								style="z-index: 7; white-space: nowrap; text-align: center; text-transform: uppercase;">Jim Hult<br> <br> 
 							</div>
 
 							<!-- LAYER NR. 4 -->
@@ -181,7 +181,7 @@
 								data-splitout="none"
 								data-responsive_offset="on"
 
-								style="z-index: 8; white-space: nowrap; text-align: center; text-transform: uppercase;">Donec erat urna, tincidunt at leo non, blandit finibus ante.<br> Nunc venenatis risus in finibus dapibus. Ut ac massa sodales,<br> mattis enim id, efficitur tortor. Nullam
+								style="z-index: 8; white-space: nowrap; text-align: center; text-transform: uppercase;">Attorney at Law<br> 1(303)570-8998<br>jim@trial-lawyers.com
 							</div>
 
 							<!-- LAYER NR. 5 -->
@@ -223,8 +223,8 @@
 				<div class="row equal-height-columns">
 					<div class="col-sm-4 g-text-color-1">
 						<div class="arrow-section-block arrow-bottom text-center equal-height-column">
-							<h3 class="text-uppercase g-mb-30"><strong>We Know Our Job</strong></h3>
-							<p>Sed feugiat porttitor nunc, non dignissim ipsum vestibulum in. Donec in blandit dolor. Vivamus a fringilla lorem, vel faucibus ante. Nunc ullamcorper, justo a iaculis elementum, enim orci viverra eros, fringilla porttitor lorem eros vel odio. In rutrum tellus vitae blandit lacinia.</p>
+							<h3 class="text-uppercase g-mb-30"><strong>Jim Knows the Law</strong></h3>
+							<p>With over 24 years experience ....</p>
 						</div>
 						<div class="arrow-section-img"><img class="full-width" src="assets/img-temp/PeopleImages.com-ID439488.jpg" alt=""></div>
 					</div>
@@ -232,13 +232,13 @@
 						<div class="arrow-section-img"><img class="full-width" src="assets/img-temp/PeopleImages.com-ID32028.jpg" alt=""></div>
 						<div class="arrow-section-block arrow-top text-center equal-height-column">
 							<h3 class="text-uppercase g-mb-30"><strong>We Are The Best</strong></h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vitae est lorem. Aenean imperdiet nisi a dolor condimentum, id ullamcorper lacus vestibulum. Praesent pulvinar gravida efficitur. Aenean bibendum purus eu nisi pulvinar venenatis vitae non velit.</p>
+							<p>Jim is a fighter ...</p>
 						</div>
 					</div>
 					<div class="col-sm-4 g-text-color-1">
 						<div class="arrow-section-block arrow-bottom text-center equal-height-column">
 							<h3 class="text-uppercase g-mb-30"><strong>We Are Winners</strong></h3>
-							<p>Aenean lobortis ante ac porttitor eleifend. Morbi massa justo, gravida sollicitudin tortor vel, dignissim viverra lectus. In varius blandit condimentum. Pellentesque rutrum mauris ornare libero imperdiet pellentesque. Ut porta consequat mi, non malesuada.</p>
+							<p>Go get them Jim ...</p>
 						</div>
 						<div class="arrow-section-img"><img class="full-width" src="assets/img-temp/PeopleImages.com-ID479997.jpg" alt=""></div>
 					</div>
@@ -255,7 +255,7 @@
 						<div class="g-heading-v9 text-center g-mb-30">
 							<h2><strong>What We Do</strong></h2>
 						</div>
-						<p class="text-center g-fs-16 g-mb-60">Sed feugiat porttitor nunc, non dignissim ipsum vestibulum in. Donec in blandit dolor. Vivamus a fringilla lorem, vel faucibus ante. Nunc ullamcorper, justo a iaculis elementum, enim orci viverra eros, fringilla porttitor lorem eros vel</p>
+						<p class="text-center g-fs-16 g-mb-60">Jim's law test, non dignissim ipsum vestibulum in. Donec in blandit dolor. Vivamus a fringilla lorem, vel faucibus ante. Nunc ullamcorper, justo a iaculis elementum, enim orci viverra eros, fringilla porttitor lorem eros vel</p>
 					</div>
 				</div>
 
@@ -312,15 +312,15 @@
 								<ul class="list-unstyled marked-list-v1">
 									<li data-mark="+">
 										<h5 class="text-uppercase"><strong>Professional Staff</strong></h5>
-										<p>Cras sit amet varius velit. Maecenas porta condimentum tortor at sagittis. Cum sociis natoque penatibus et magnis disvarius velit</p>
+										<p></p>
 									</li>
 									<li data-mark="+">
-										<h5 class="text-uppercase"><strong>Great Experience</strong></h5>
-										<p>Proin dignissim eget enim id aliquam. Proin ornare dictum leo, non elementum tellus molestie et rutrum mauris ornare.</p>
+										<h5 class="text-uppercase"><strong>Twenty Four Years of Experience</strong></h5>
+										<p></p>
 									</li>
 									<li data-mark="+">
 										<h5 class="text-uppercase"><strong>Qualified Support</strong></h5>
-										<p>Integer commodo est id erat bibendum, eu convallis dolor tempus. Fusce mollis blandit eros. Nunc quis sapien in massa varius convallis at sed justo.</p>
+										<p></p>
 									</li>
 								</ul>
 							</div>
@@ -347,18 +347,18 @@
 								<div class="g-heading-v9 g-mb-30">
 									<h2><strong>Our Benefits</strong></h2>
 								</div>
-								<p>Aenean lobortis ante ac porttitor eleifend. Morbi massa justo, gravida sollicitudin tortor vel, dignissim viverra lectus. In varius blandit condimentum. Pellentesque rutrum mauris ornare libero imperdiet pellentesque.</p>
+								<p>Jim works hard for you.</p>
 								<ul class="list-unstyled standart-column-space row">
 									<li class="col-md-6 g-mb-20">
-										<h5 class="text-uppercase"><strong>Free Advice</strong></h5>
-										<p>Praesent pulvinar gravida efficitur. Aenean bibendum purus eu nisi pulvinar venenatis vitae non velit. Sed et eleifend mi. Fusce dictum orci libero.</p>
+										<h5 class="text-uppercase"><strong>Free Initial Consultation</strong></h5>
+										<p></p>
 									</li>
 									<li class="col-md-6 g-mb-20">
 										<h5 class="text-uppercase"><strong>Documentation Support</strong></h5>
 										<p>Suspendisse pulvinar facilisis ligula vel pharetra. Vestibulum volutpat porttitor ex a rutrum. Aenean consectetur risus ultricies enim finibus lobortis non at ipsum.</p>
 									</li>
 									<li class="col-md-6 g-mb-20">
-										<h5 class="text-uppercase"><strong>Professional Teams</strong></h5>
+										<h5 class="text-uppercase"><strong>Professional Team</strong></h5>
 										<p>Integer commodo est id erat bibendum, eu convallis dolor tempus. Fusce mollis blandit eros. Nunc quis sapien in massa varius convallis at sed justo.</p>
 									</li>
 									<li class="col-md-6 g-mb-20">
@@ -473,47 +473,27 @@
 		<section id="team">
 			<div class="container g-pt-100 g-pb-40">
 				<div class="row">
-					<div class="col-md-3 col-sm-12">
+					<div class="col-md-6 col-sm-12">
 						<div class="g-heading-v9 g-mb-30">
-							<h2><strong>Meet Our Attorneys</strong></h2>
+							<h2><strong>Meet Your Attorney</strong></h2>
 						</div>
-						<p>Proin dignissim eget enim id aliquam. Proin ornare dictum leo, non elementum tellus molestie et. Vivamus sit amet scelerisque leo. In eu commodo est. Sed bibendum a metus ac sollicitudin.</p>
-						<p>Curabitur elementum placerat elit vel accumsan. Quisque fermentum libero sit amet condimentum tincidunt. Proin hendrerit nec turpis sit amet aliquet. Integer libero velit, molestie et sagittis non, maximus nec turpis.</p>
+						<p>This is Jim</p>
+						<p>Go Jim Go .....</p>
 						<p><a class="btn-u btn-u-lg btn-u-red btn-u-upper" href="#">Contact Us</a></p>
 					</div>
-					<div class="col-md-3 col-xs-4 col-3xs-12">
+					<div class="col-md-6 col-xs-4 col-3xs-12">
 						<div class="team-v-8">
 							<img class="img-responsive" src="assets/img-temp/team/team1.jpg" alt="">
 							<p class="post text-uppercase g-theme-text-color-1 g-mb-15"><strong>Partner</strong></p>
-							<h4 class="text-uppercase"><strong>eric pyton</strong></h4>
+							<h4 class="text-uppercase"><strong>Jim Hult</strong></h4>
 							<p class="g-mb-15">civil and criminal law</p>
 							<hr>
-							<p class="g-mb-5"><i class="fa fa-envelope"></i> eric@unify.com</p>
-							<p><i class="fa fa-phone-square"></i> +48 555 2566 112</p>
+							<p class="g-mb-5"><i class="fa fa-envelope"></i> jim@trial-laywers.com</p>
+							<p><i class="fa fa-phone-square"></i> 1(303)570-8998</p>
 						</div>
 					</div>
-					<div class="col-md-3 col-xs-4 col-3xs-12">
-						<div class="team-v-8">
-							<img class="img-responsive" src="assets/img-temp/team/team3.jpg" alt="">
-							<p class="post text-uppercase g-theme-text-color-1 g-mb-15"><strong>Partner</strong></p>
-							<h4 class="text-uppercase"><strong>sam king</strong></h4>
-							<p class="g-mb-15">business and criminal law</p>
-							<hr>
-							<p class="g-mb-5"><i class="fa fa-envelope"></i> sam@unify.com</p>
-							<p><i class="fa fa-phone-square"></i> +48 555 2566 114</p>
-						</div>
-					</div>
-					<div class="col-md-3 col-xs-4 col-3xs-12">
-						<div class="team-v-8">
-							<img class="img-responsive" src="assets/img-temp/team/team2.jpg" alt="">
-							<p class="post text-uppercase g-theme-text-color-1 g-mb-15"><strong>Partner</strong></p>
-							<h4 class="text-uppercase"><strong>tomas klepton</strong></h4>
-							<p class="g-mb-15">criminal law</p>
-							<hr>
-							<p class="g-mb-5"><i class="fa fa-envelope"></i> tomas@unify.com</p>
-							<p><i class="fa fa-phone-square"></i> +48 555 2566 115</p>
-						</div>
-					</div>
+
+
 				</div>
 			</div>
 		</section>
@@ -672,12 +652,12 @@
 								<div class="g-heading-v9 g-mb-30">
 									<h2 class="text-uppercase"><strong>Get In Touch</strong></h2>
 								</div>
-								<p class="g-fs-16 g-mb-60">In eu commodo est. Sed bibendum a metus ac sollicitudin. Curabitur elementum placerat elit vel accumsan.</p>
+								<p class="g-fs-16 g-mb-60"></p>
 								<ul class="list-unstyled g-fs-12 address-list text-uppercase">
-									<li><i class="glyphicon glyphicon-map-marker g-mr-15"></i> <em>Address:</em> <strong>In sed lectus tincidunt</strong></li>
-									<li><i class="glyphicon glyphicon-earphone g-mr-15"></i> <em>Phone Number:</em> <strong>+48 555 2566 112</strong></li>
-									<li><i class="fa fa-envelope g-mr-15"></i> <em>Email:</em> <strong>marketing@unify.com</strong></li>
-									<li><i class="fa fa-comments g-mr-15"></i> <em>Toll Free:</em> <strong>+48 555 1258 987</strong></li>
+									<li><i class="glyphicon glyphicon-map-marker g-mr-15"></i> <em>Address:</em> <strong>4945 Twin Lakes Rd #42</strong></li>
+									<li><i class="glyphicon glyphicon-earphone g-mr-15"></i> <em>Phone Number:</em> <strong>1 (303) 570-8998</strong></li>
+									<li><i class="fa fa-envelope g-mr-15"></i> <em>Email:</em> <strong>jim@trial-lawyers.com</strong></li>
+									
 								</ul>
 							</div>
 						</div>
